# ugrid-checks

./: .pre-commit-config.yaml  Current_Conformance_Statements.txt  LICENSE  MANIFEST.in  Notes_TODOs.txt  README.md  Statements_Implemented_Tested.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci-tests.yml  ci-wheels.yml  pr_tests.yml
lib/ugrid_checks/: __init__.py  __main__.py  _var_data.py  check.py  cli.py  logging.py  nc_dataset_scan.py  scan_utils.py  structure.py  ugrid_logger.py
lib/ugrid_checks/tests/: __init__.py
lib/ugrid_checks/tests/check/: __init__.py  test_StructureAnalysis.py  test_check_data.py  test_check_dataset.py  test_check_dataset__api.py  test_check_dataset__checks.py  test_name_regex.py
lib/ugrid_checks/tests/check/checker/: test_checking_report.py  test_structure_object.py  test_structure_report.py
lib/ugrid_checks/tests/nc_dataset_scan/: test_scan_dataset.py
test_data/: data_C4.nc
tools/: ugrid_checker.py
