[flake8]
# References:
#   https://flake8.readthedocs.io/en/latest/user/configuration.html
#   https://flake8.readthedocs.io/en/latest/user/error-codes.html
#   https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
#   https://gitlab.com/pycqa/flake8-docstrings
max-line-length = 88
max-complexity = 19
docstring-convention = numpy
select = C,D,E,F,W,B,B950
ignore =
    # E203: whitespace before ':'
    E203,
    # E226: missing whitespace around arithmetic operator
    E226,
    # E231: missing whitespace after ',', ';', or ':'
    E231,
    # E402: module level imports on one line
    E402,
    # E501: line too long
    E501,
    # E731: do not assign a lambda expression, use a def
    E731,
    # W503: line break before binary operator
    W503,
    # W504: line break after binary operator
    W504
exclude =
    .eggs
    build

[metadata]
author = pp-mo
author_email = patrick.peglar@metoffice.gov.uk
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
description = Check netcdf files for conformance with UGRID specifications
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    mesh
    ugrid
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
name = ugrid-checks
project_urls =
    Code = https://github.com/pp-mo/ugrid-checks
    Discussions = https://github.com/pp-mo/ugrid-checks/discussions
    Documentation = https://github.com/pp-mo/ugrid-checks
    Issues = https://github.com/pp-mo/ugrid-checks/issues
url = https://github.com/pp-mo/ugrid-checks
version = attr: ugrid_checks.__version__

[options]
include_package_data = False
install_requires =
    netCDF4
package_dir =
    =lib
packages = find:
python_requires =
    >=3.6
zip_safe = False

[options.extras_require]
dev =
    pre-commit
test =
    pytest>=6.0

[options.packages.find]
where = lib

[tool:pytest]
testpaths =
    lib/ugrid_checks/tests
addopts =
    -v
